--- a/package.json
+++ b/package.json
@@ -66,50 +66,79 @@
   },
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "cross-env NODE_ENV=development babel --out-dir dist --ignore *.spec.js src",
+    "build": "cross-env NODE_ENV=development webpack",
     "check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
     "commit": "git-cz",
     "commitmsg": "validate-commit-msg",
     "cover": "nyc run-s test:unit",
+    "lint:css": "stylelint 'app/**/*.css'",
     "lint:js": "eslint . --ext .js --ext .json --ignore-path .gitignore",
-    "precommit": "run-s cover check-coverage",
-    "postcheckout": "yarn",
+    "precommit": "echo 'run-s cover check-coverage'",
+    "postcheckout": "npm i",
     "postcommit": "git status",
-    "postmerge": "yarn",
+    "postmerge": "npm i",
     "postpush": "git status",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
+    "start:dev": "nodemon src/server.js",
+    "stats": "cross-env NODE_ENV=production webpack -p --json > report/bundle-stats.json",
     "test": "cross-env NODE_ENV=test check-engines && run-s lint:* test:unit",
     "test:unit": "mocha -G -d -s 60 -R spec src/index.spec.js --compilers js:babel-register",
     "upgrade": "updtr --save-exact",
     "watch:unit": "npm run test:unit -- -w"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@cycle/dom": "20.1.0",
+    "@cycle/rxjs-run": "8.0.0",
+    "babel-polyfill": "6.26.0",
+    "d3": "4.12.0",
+    "express": "4.16.2",
+    "mongodb": "2.2.33",
+    "rxjs": "5.5.2",
+    "sanctuary": "0.13.2",
+    "xstream": "11.0.0"
+  },
   "devDependencies": {
-    "babel-cli": "6.24.1",
-    "babel-core": "6.23.1",
-    "babel-loader": "6.4.1",
-    "babel-preset-env": "1.3.3",
-    "babel-register": "6.24.1",
-    "chai": "3.5.0",
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-minify": "0.2.0",
+    "babel-register": "6.26.0",
+    "chai": "4.1.2",
     "check-engines": "1.5.0",
+    "clean-webpack-plugin": "0.1.17",
     "codecov.io": "0.1.6",
     "commitizen": "2.9.6",
-    "cross-env": "3.2.4",
-    "cz-conventional-changelog": "2.0.0",
-    "eslint": "3.18.0",
+    "cross-env": "5.1.1",
+    "css-loader": "0.28.7",
+    "cssnano": "3.10.0",
+    "cz-conventional-changelog": "2.1.0",
+    "eslint": "4.11.0",
     "eslint-plugin-chai-expect": "1.1.1",
-    "eslint-plugin-eslint-comments": "1.0.0",
-    "eslint-plugin-filenames": "1.1.0",
+    "eslint-plugin-eslint-comments": "2.0.1",
+    "eslint-plugin-filenames": "1.2.0",
     "eslint-plugin-json": "1.2.0",
-    "eslint-plugin-mocha": "4.9.0",
-    "eslint-plugin-promise": "3.5.0",
-    "husky": "0.13.3",
-    "mocha": "3.2.0",
-    "npm-run-all": "4.0.2",
-    "nyc": "10.2.0",
-    "rimraf": "2.6.1",
-    "updtr": "0.2.3",
-    "validate-commit-msg": "2.12.1",
-    "webpack": "2.3.2"
+    "eslint-plugin-mocha": "4.11.0",
+    "eslint-plugin-promise": "3.6.0",
+    "extract-text-webpack-plugin": "3.0.2",
+    "husky": "0.14.3",
+    "mocha": "4.0.1",
+    "nodemon": "1.12.1",
+    "npm-run-all": "4.1.2",
+    "nyc": "11.3.0",
+    "path": "0.12.7",
+    "postcss": "6.0.14",
+    "postcss-cssnext": "3.0.2",
+    "postcss-custom-media": "6.0.0",
+    "postcss-import-url": "3.0.1",
+    "postcss-loader": "2.0.9",
+    "postcss-reporter": "5.0.0",
+    "rimraf": "2.6.2",
+    "style-loader": "0.19.0",
+    "stylelint": "8.2.0",
+    "updtr": "2.0.0",
+    "validate-commit-msg": "2.14.0",
+    "webpack": "3.8.1",
+    "workbox-webpack-plugin": "2.1.2"
   }
 }
