--- a/.eslintrc
+++ b/.eslintrc
@@ -38,7 +38,7 @@
         "constructor-super": "error",
         "generator-star-spacing": "error",
         "no-class-assign": "error",
-        "no-confusing-arrow": "error",
+        "no-confusing-arrow": "off",
         "no-const-assign": "error",
         "no-dupe-class-members": "error",
         "no-new-symbol": "error",
@@ -49,7 +49,7 @@
         "object-shorthand": "error",
         "prefer-arrow-callback": "error",
         "prefer-const": "error",
-        "prefer-reflect": "error",
+        "prefer-reflect": "off",
         "prefer-rest-params": "error",
         "prefer-spread": "error",
         "prefer-template": "error",
