--- a/package.json
+++ b/package.json
@@ -88,11 +88,13 @@
   },
   "dependencies": {
     "@cycle/dom": "20.1.0",
+    "@cycle/http": "14.8.0",
     "@cycle/rxjs-run": "8.0.0",
     "babel-polyfill": "6.26.0",
     "d3": "4.12.0",
     "express": "4.16.2",
     "mongodb": "2.2.33",
+    "ramda": "0.25.0",
     "rxjs": "5.5.2",
     "sanctuary": "0.13.2",
     "xstream": "11.0.0"
